# Cache_system

./: CMakeLists.txt  LFU.md  LRU-k.md  LRU.md  LRUCache.h  LRU_Cache.h  LRU_K_Cache.h  README.md  main  main.cpp
.md/: ARC.md  LRU-k.md  LRU.md
include/: ARC_Cache.h  LFU_Cache.h  LFU_Hash_Cache.h  LRU_Cache.h  LRU_Hash_Cache.h
test/testARC/: test.cpp
test/testHashLFU/: test.cpp
test/testLFU/: test.cpp
test/testLRU/: test.cpp
test/testLRU-k/: test.cpp
